--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,1 +1,5 @@
-set -g default-shell /usr/bin/fish
+set-option -g default-shell /usr/bin/fish
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
